# I-patch

./: .gitmodules  CMakeLists.txt  README.md
implicit/: CMakeLists.txt  iloft.cc  iloft.hh  iloft.hpp  implicit.cc  implicit.hh  implicit_test.cc  ipatch.cc  ipatch.hh  ipatch.hpp  liming.cc  liming.hh  liming.hpp  plane.cc  plane.hh  plane.hpp
misc/assets/: tests
tessellation/: CMakeLists.txt  mesh_utils.cc  mesh_utils.hh  piecewise.cc  piecewise.hh  surface.cc  surface.hh  surface_test.cc
